--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,23 +2,14 @@
   <div class="panel-footer">
 	<div class="container-fluid">
 	  <div class="row">
-		<div class="col-sm-4">
-			
-		  <p>&copy 2019 VDEL. Site made with <a href="https://jekyllrb.com">Jekyll</a>;  <a href="{{ site.url }}{{ site.baseurl }}/aboutwebsite.html">copy and  modify it for your own research group.</a></p>
-              <p>We are part of the <a href="https://www.meche.engineering.cmu.edu">Mechanical Engineering</a> at <a href="https://www.cmu.edu">Carnegie Mellon University</a>.</p>
-            
-
-		   <p>  </p><p>
-            		  
-            
-		</div>
+		
 		<!--<div class="col-sm-4">
 		  Funding:<br />
 		  - <a href="http://www.nwo.nl/en/research-and-results/programmes/Talent+Scheme">Vidi </a> and <a href='https://www.fom.nl/en/news/press-releases/2016/11/18/28634/'>Projectruimte</a> grants from <a href="http://www.nwo.nl">NWO</a> <br />
 		  - <a href="https://www.universiteitleiden.nl/en/research/research-projects/science/frontiers-of-nanoscience-nanofront">Frontier of Nanosciences</a>, a gravity program from <a href="http://www.nwo.nl">NWO</a>
           - <a href='https://www.universiteitleiden.nl/en/news/2017/08/two-erc-grants-for-leiden-physics'>ERC starting grant</a>
 		</div>-->
-		<div class="col-sm-4">
+		<!-- <div class="col-sm-4">
 		  Contact:<br />
 		Visual Design and Engineering Lab<br />
 		Carnegie Mellon University<br />
@@ -26,7 +17,33 @@
 		5000 Forbes Avenue<br />
 		Pittsburgh, PA 15213<br />
             (<a href="https://goo.gl/maps/pruvPUdgj5UZL7Mt8">Maps</a>, <a href="https://www.cmu.edu/visit/maps-parking-transportation.html">Directions</a>)
+		</div> -->
+		<div class="col-sm-4 clearfix">
+		<h4>Levent Burak Kara</h4>
+		Carnegie Mellon University<br/>
+		Mechanical Engineering Department<br/>
+		Scaife Hall 411<br/>
+		5000 Forbes Avenue<br/>
+		Pittsburgh, PA 15213<br/>
+		(412) 268-2509<br/>
+		lkara (at) cmu.edu
+		(<a href="https://goo.gl/maps/bR9kgPgHVzqxj6X29">Maps</a>, <a href="https://www.cmu.edu/visit/maps-parking-transportation.html">Directions</a>)
 		</div>
+
+		<div class="col-sm-4 clearfix">
+		<h4>Lab Address</h4>
+		Carnegie Mellon University<br/> 
+		Wean Hall 3412<br/>
+		5000 Forbes Avenue<br/>
+		Pittsburgh, PA 15213<br/>
+		(<a href="https://goo.gl/maps/pruvPUdgj5UZL7Mt8">Maps</a>, <a href="https://www.cmu.edu/visit/maps-parking-transportation.html">Directions</a>)
+		</div>
+
+		<div class="col-sm-4 clearfix">
+	    <p>&copy 2019 VDEL. Site made with <a href="https://jekyllrb.com">Jekyll</a>;  <a href="{{ site.url }}{{ site.baseurl }}/aboutwebsite.html">copy and  modify it for your own research group.</a></p>
+        <p>We are part of the <a href="https://www.meche.engineering.cmu.edu">Mechanical Engineering</a> at <a href="https://www.cmu.edu">Carnegie Mellon University</a>.</p> 
+		</div>
+
 	  </div>
 	</div>
   </div>
