--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,7 +26,7 @@
 		5000 Forbes Avenue<br/>
 		Pittsburgh, PA 15213<br/>
 		(412) 268-2509  | lkara (at) cmu.edu<br/>
-		(<a href="https://goo.gl/maps/bR9kgPgHVzqxj6X29">Maps</a>, <a href="https://www.cmu.edu/visit/maps-parking-transportation.html">Directions</a>)
+		(<a href="https://goo.gl/maps/bR9kgPgHVzqxj6X29">Map</a>, <a href="https://www.cmu.edu/visit/maps-parking-transportation.html">Directions</a>)
 		</div>
 
 		<div class="col-sm-4 clearfix">
@@ -35,7 +35,7 @@
 		Wean Hall 3412<br/>
 		5000 Forbes Avenue<br/>
 		Pittsburgh, PA 15213<br/>
-		(<a href="https://goo.gl/maps/pruvPUdgj5UZL7Mt8">Maps</a>, <a href="https://www.cmu.edu/visit/maps-parking-transportation.html">Directions</a>)
+		(<a href="https://goo.gl/maps/pruvPUdgj5UZL7Mt8">Map</a>, <a href="https://www.cmu.edu/visit/maps-parking-transportation.html">Directions</a>)
 		</div>
 
 		<div class="col-sm-4 clearfix">
