--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,7 +25,7 @@
 		Scaife Hall 411<br/>
 		5000 Forbes Avenue<br/>
 		Pittsburgh, PA 15213<br/>
-		(412) 268-2509  | lkara (at) cmu.edu<br/>
+		(412) 268-2509  | lkara@cmu.edu<br/>
 		(<a href="https://goo.gl/maps/bR9kgPgHVzqxj6X29">Map</a>, <a href="https://www.cmu.edu/visit/maps-parking-transportation.html">Directions</a>)
 		</div>
 
